# EyeWitness

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml
Python/: EyeWitness.py  ValidateDefinitions.py
Python/modules/: helpers.py
