[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyewitness"
version = "0.1.0"
description = "EyeWitness - screenshot websites and collect server header info"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "netaddr>=0.10.0",
    "psutil>=5.9.0",
    "selenium>=4.29.0",
    "rapidfuzz>=3.0.0",
    "pyvirtualdisplay>=3.0; sys_platform != 'win32'",
    "argcomplete>=2.0.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.scripts]
eyewitness = "EyeWitness:main"

[tool.setuptools]
package-dir = {"" = "Python"}
py-modules = ["EyeWitness"]

[tool.setuptools.packages.find]
where = ["Python"]

[tool.setuptools.package-data]
modules = ["bin/*", "categories.txt", "signatures.txt"]
